# swagger.json
@@ -6,117 +6,7 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {
-			"Prisma.Without_Prisma.UserCreateInput.Prisma.UserUncheckedCreateInput_": {
-				"properties": {},
-				"type": "object"
-			},
-			"Prisma.UserUncheckedCreateInput": {
-				"properties": {
-					"gender": {
-						"type": "string"
-					},
-					"dateBirth": {
-						"anyOf": [
-							{
-								"type": "string",
-								"format": "date-time"
-							},
-							{
-								"type": "string"
-							}
-						]
-					},
-					"password": {
-						"type": "string"
-					},
-					"username": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"gender",
-					"dateBirth",
-					"password",
-					"username",
-					"email"
-				],
-				"type": "object"
-			},
-			"Prisma.Without_Prisma.UserUncheckedCreateInput.Prisma.UserCreateInput_": {
-				"properties": {},
-				"type": "object"
-			},
-			"Prisma.UserCreateInput": {
-				"properties": {
-					"gender": {
-						"type": "string"
-					},
-					"dateBirth": {
-						"anyOf": [
-							{
-								"type": "string",
-								"format": "date-time"
-							},
-							{
-								"type": "string"
-							}
-						]
-					},
-					"password": {
-						"type": "string"
-					},
-					"username": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"gender",
-					"dateBirth",
-					"password",
-					"username",
-					"email"
-				],
-				"type": "object"
-			},
-			"Prisma.XOR_Prisma.UserCreateInput.Prisma.UserUncheckedCreateInput_": {
-				"anyOf": [
-					{
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/Prisma.Without_Prisma.UserCreateInput.Prisma.UserUncheckedCreateInput_"
-							},
-							{
-								"$ref": "#/components/schemas/Prisma.UserUncheckedCreateInput"
-							}
-						]
-					},
-					{
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/Prisma.Without_Prisma.UserUncheckedCreateInput.Prisma.UserCreateInput_"
-							},
-							{
-								"$ref": "#/components/schemas/Prisma.UserCreateInput"
-							}
-						]
-					}
-				],
-				"description": "XOR is needed to have a real mutually exclusive union type\nhttps://stackoverflow.com/questions/42123407/does-typescript-support-mutually-exclusive-types"
-			}
-		},
+		"schemas": {},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -222,9 +112,7 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/Prisma.XOR_Prisma.UserCreateInput.Prisma.UserUncheckedCreateInput_"
-							}
+							"schema": {}
 						}
 					}
 				}
